# szczepanski-dbt-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bacen-macro-pipeline-spec.md  dbt-requirements.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  dbt_docs.yml
.specs/features/: CLAUDE.md  dbt-implementation-plan.md
ci/fixtures/: sample_raw.sql
dags/bacen/: bacen_ingestion_dag.py  bacen_transform_dag.py
dbt/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/macros/: anualizar_taxa_diaria.sql  generate_schema_name.sql  variacao_percentual.sql
dbt/models/marts/: _marts__models.yml  mart_focus__acuracia.sql  mart_macro__correlacoes.sql  mart_macro__painel.sql
dbt/models/staging/: _staging__models.yml  _staging__sources.yml  stg_bacen__cambio.sql  stg_bacen__credito.sql  stg_bacen__inflacao.sql  stg_bacen__juros.sql  stg_focus__ipca_12m.sql
dbt/seeds/: _seeds__models.yml  dim_indicadores.csv
dbt/tests/: assert_selic_positiva.sql
docker/airflow/: Dockerfile
docs/adr/: 0001-isolar-runtime-dbt-em-venv.md  0002-focus-via-olinda-nao-sgs.md  0003-transform-dag-via-cosmos.md  README.md
include/: alerting.py  contracts.py  observability.py  warehouse.py
migrations/: 001_raw_schema.sql  002_focus_expectativas.sql
src/bacen/: ingestion.py
src/bacen/loaders/: focus_loader.py  postgres_loader.py
src/bacen/olinda/: client.py
src/bacen/sgs/: client.py  (+2 more)
tests/: test_contracts.py  test_dag_integrity.py
tests/extraction/: test_sgs_parse.py
