[project]
name = "szczepanski-dbt-platform"
version = "0.1.0"
description = "Pipeline de dados macroeconomicos BACEN com dbt Core + Airflow 3 — portfolio de engenharia analitica."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["logs", "dbt/target", "dbt/dbt_packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["include", "src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["ignore::DeprecationWarning"]
